Fix not showing the outline when focusing on a suggested product card
And also adjust the padding so the link covers it.

Reported by Fanny!

--- a/src/components/search/SuggestionProductCard/suggestion-product-card.scss
+++ b/src/components/search/SuggestionProductCard/suggestion-product-card.scss
@@ -1,8 +1,6 @@
 @import "src/styles/scaffold";
 
 [data-fs-suggestion-product-card] {
-  padding: var(--fs-spacing-1) 0;
-
   [data-card-image] {
     display: flex;
   }
@@ -40,9 +38,8 @@
   }
 
   [data-store-link] {
-    padding: 0 var(--fs-spacing-3);
+    padding: var(--fs-spacing-1) var(--fs-spacing-3);
     color: inherit;
     text-decoration: none;
-    outline: none;
   }
 }
